[metadata]
name = nagare-sessions-memory
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Sessions in memory
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/sessions-memory
    Tracker = https://github.com/nagareproject/sessions-memory/issues

[options]
zip_safe = False
packages = find:
install_requires =
    nagare-server-http
    nagare-services-sessions

[options.entry_points]
nagare.sessions =
    memory = nagare.sessions.memory_sessions:SessionsWithPickledStates

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
